[gd_scene load_steps=23 format=3 uid="uid://7tl28rvcec5r"]

[ext_resource type="Script" path="res://commander_boss.gd" id="1_fajfr"]
[ext_resource type="Script" path="res://Scripts/Health.gd" id="2_ov136"]
[ext_resource type="Texture2D" uid="uid://brf7l880lofs" path="res://gifs/commander/idle/tile000.png" id="3_bpya0"]
[ext_resource type="Texture2D" uid="uid://b7ge4sw6fxp7k" path="res://gifs/commander/death/tile003.png" id="4_3f0vj"]
[ext_resource type="Script" path="res://Scripts/HitBox.gd" id="4_opnkt"]
[ext_resource type="Texture2D" uid="uid://ly4463tlgasr" path="res://gifs/commander/death/tile000.png" id="5_21hjt"]
[ext_resource type="Script" path="res://Scripts/HurtBox.gd" id="5_blc0t"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="6_5h0pw"]
[ext_resource type="Script" path="res://Entities/CommanderAwake.gd" id="9_1j7ud"]
[ext_resource type="Script" path="res://Entities/CommanderIdle.gd" id="10_66upn"]
[ext_resource type="Script" path="res://Entities/CommanderFollo.gd" id="11_ofeqg"]
[ext_resource type="Script" path="res://Entities/CommanderMele.gd" id="12_tp3q8"]
[ext_resource type="Script" path="res://Entities/CommanderDash.gd" id="13_dw512"]
[ext_resource type="Script" path="res://Entities/CommanderDeath.gd" id="14_ljm5j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bhbux"]
radius = 14.0
height = 72.0

[sub_resource type="Animation" id="Animation_p3i27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_bpya0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:immortality")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/awake:awake")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tfi20"]
resource_name = "awake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_3f0vj"), ExtResource("5_21hjt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:immortality")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/awake:awake")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pndl5"]
resource_name = "follow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3f0vj")]
}

[sub_resource type="Animation" id="Animation_ugfey"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7bbn"]
_data = {
"RESET": SubResource("Animation_p3i27"),
"awake": SubResource("Animation_tfi20"),
"follow": SubResource("Animation_pndl5"),
"idle": SubResource("Animation_ugfey")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ra0uc"]
size = Vector2(22, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b06oy"]
size = Vector2(46, 98)

[node name="CommanderBoss" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_fajfr")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_ov136")
max_health = 30

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_bpya0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 29)
shape = SubResource("CapsuleShape2D_bhbux")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a7bbn")
}

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("4_opnkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(30, 30)
shape = SubResource("RectangleShape2D_ra0uc")
disabled = true

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("5_blc0t")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-7, 19)
shape = SubResource("RectangleShape2D_b06oy")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_5h0pw")

[node name="awake" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_1j7ud")
enemy = NodePath("../..")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("10_66upn")

[node name="follow" type="Node" parent="StateMachine"]
script = ExtResource("11_ofeqg")

[node name="mele" type="Node" parent="StateMachine"]
script = ExtResource("12_tp3q8")

[node name="dash" type="Node" parent="StateMachine"]
script = ExtResource("13_dw512")

[node name="death" type="Node" parent="StateMachine"]
script = ExtResource("14_ljm5j")

[connection signal="commander_death" from="." to="StateMachine/idle" method="_on_commander_boss_commander_death"]
[connection signal="commander_death" from="." to="StateMachine/follow" method="_on_commander_boss_commander_death"]
[connection signal="commander_death" from="." to="StateMachine/mele" method="_on_commander_boss_commander_death"]
[connection signal="commander_death" from="." to="StateMachine/dash" method="_on_commander_boss_commander_death"]
[connection signal="commander_mele" from="." to="StateMachine/mele" method="_on_commander_boss_commander_mele"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
